--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Slider</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="image-slider">
+        <div id="sliders">
+        <div id="pre-btn" onclick="nextSlide()"><i class="arrow right"></i></div>
+        <div id="next-btn" onclick="previousSlide()"><i class="arrow left"></i></div>
+        <div class="slide active"><img src="icons/img1.jpg" alt=""></div>
+        <div class="slide"><img src="icons/img2.jpg" alt=""></div>
+        <div class="slide"><img src="icons/img3.jpg" alt=""></div>
+        <div class="slide"><img src="icons/img4.jpeg" alt=""></div>
+        <div class="slide"><img src="icons/img5.jpg" alt=""></div>
+        <div class="slide"><img src="icons/img6.webp" alt=""></div>
+        <div class="slide"><img src="icons/img7.webp" alt=""></div>
+        <div class="slide"><img src="icons/img8.jpeg" alt=""></div>
+        <div class="slide"><img src="icons/img9.jpg" alt=""></div>
+    </div>
 </body>
+<script src="script.js "></script>
 </html>
