make json Objects

--- a/index.html
+++ b/index.html
@@ -9,31 +9,13 @@
 </head>
 
 <body>
-    <div class="image-slider">
+    
         <div id="sliders">
             <div id="pre-btn">&#10094</div>
             <div id="next-btn">&#10095</div>
-            <div class="slide active"><img src="icons/img1.jpg" alt=""></div>
-            <div class="slide"><img src="icons/img2.jpg" alt=""></div>
-            <div class="slide"><img src="icons/img3.jpg" alt=""></div>
-            <div class="slide"><img src="icons/img4.jpeg" alt=""></div>
-            <div class="slide"><img src="icons/img5.jpg" alt=""></div>
-            <div class="slide"><img src="icons/img6.webp" alt=""></div>
-            <div class="slide"><img src="icons/img7.webp" alt=""></div>
-            <div class="slide"><img src="icons/img8.jpeg" alt=""></div>
-            <div class="slide"><img src="icons/img9.jpg" alt=""></div>
-            <div class="bullet-points">
-                <div class="bullet"></div>
-                <div class="bullet"></div>
-                <div class="bullet"></div>
-                <div class="bullet"></div>
-                <div class="bullet"></div>
-                <div class="bullet"></div>
-                <div class="bullet"></div>
-                <div class="bullet"></div>
-                <div class="bullet"></div>
+            <div class="bullet-points" id="bullet-points">
             </div>
-        </div>
+      
 
     </div>
 </body>
