add progress bar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div id="next-btn">&#10095</div>
         <div class="bullet-points" id="bullet-points">
         </div>
+        <div id="myBar" class="progress-bar" >
+            <div class="filter" id="filter"></div>
+    </div>
+   ]
     </div>
 </body>
 <script src="script.js"></script>
